--- a/index.html
+++ b/index.html
@@ -12,7 +12,22 @@
 
 <body>
 
-    <h1>hii</h1>
+    <div class="text-center p-5">
+        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, officiis quod architecto reiciendis officia a inventore quae laborum numquam, rem dicta doloribus corporis harum iure nobis nisi soluta odit. Iure, numquam!</h1>
+    </div>
+    <div class="container text-center p-5">
+        <div class="row g-5">
+            <div class="col-lg-4 col-12" id="card1">
+                <div class="card p-2">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, aliquam?</p>
+                    <button class="btn btn-success" id="btn">click</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+
+
 
 
     <script src="index.js"></script>
